syntax = "proto3";

option csharp_namespace = "RetroShop_Client.Protos";

package user;

service UsuarioService {
    rpc Post(Usuario) returns (IdUsuario);
    rpc Login(UsuarioLogin) returns(Usuario);
}
message Usuario{
    string nombre =1;
    string apellido =2;
    int32 dni=3;
    string email=4;
    string usuario=5;
    string clave=6;
}
message IdUsuario{
        int32 idUsuario=1;
}
message UsuarioLogin{
    string nombre=1;
    string clave=2;
}
